[evacheng]fix: implemented word-break of todo item text when overflow

--- a/src/components/todo-item/TodoItem.css
+++ b/src/components/todo-item/TodoItem.css
@@ -70,6 +70,7 @@
   width: 430px;
   text-align: left;
   align-self: center;
+  word-break: break-all;
 }
 
 .li__input {
